--- a/views/igra.html
+++ b/views/igra.html
@@ -1,67 +1,141 @@
 % import model
 % import json
-
+% from timeit import default_timer as timer
 % rebase("base.html")
 </div>
 </nav>
 <br><br>
-<body>
-  
-
 % if stanje == model.ZMAGA and tezavnost.upper()=="TEKMOVALNO":
 %with open("stanje.json","r") as d:
 %  vsebina = json.load(d)
 %cas = vsebina[str(id_igre)][4]
 
+<h1 class="text-center">ZMAGA</h1>
+  <br><br>
+  %if len(igra.napake) == 0:
+  <div class="container">
+    <div class="row; mt-3">
+    <div class="col; md-8">
+        <p>Zmagali ste, potrebovali ste {{str(int(cas//60)) + " "+model.sklanjanje(int(cas//60))+" in "+str(round(cas%60,2))+" "+"sekunde"}}! Pritisnite gumb za ponovno igro, če želite igrati še enkrat (ne nujno na isti način) ali pa
+          kliknite na logo, da pridete do začetne strani.
+        </p>
+    </div>
+  </div>
+</div>
+<div class="container text-center">
+  <a href="/{{kontinent}}/" class="btn btn-secondary" role="button">Ponovna igra</a>
+  </div>
+<br><br>
+  %else:
+  <div class="container">
+    <div class="row; mt-3">
+    <div class="col; md-8">
+  <p>Zmagali ste, potrebovali ste {{str(int(cas//60)) + " "+model.sklanjanje(int(cas//60))+" in "+str(round(cas%60,2))+" "+"sekunde"}}! Vaše napake so prikazane spodaj. Pritisnite gumb za ponovno igro, če želite igrati še enkrat (ne nujno na isti način) ali pa
+    kliknite na logo, da pridete do začetne strani.
+  </p>
+</div>
+</div>
+</div>
+    %for sez in igra.napake:
+    %ime = sez[0]
+    %link = sez[1]
+    <p class="text-center" style="color:red">{{ime}}</p>
+    <img src="/img/{{kontinent+'/'+link}}" class="rounded mx-auto d-block" alt="zastava"
+  style="width:400px;height:400px;">
+  <br>
+  <br>
+  %end
+  <div class="container text-center">
+    <a href="/{{kontinent}}/" class="btn btn-secondary" role="button">Ponovna igra</a>
+    </div>
+  <br><br>
+  %end
+
 %end
-  <h1>ZMAGA</h1>
-  <p>Zmagali ste, potrebovali ste {{str(int(cas//60)) + " "+model.sklanjanje(int(cas//60))+" in "+str(round(cas%60,2))+" "+"sekunde"}}!</p>
-  <br>
-  <form action="/">
-    <button type="submit">Zacetna stran</button>
-  </form>
-  <br>
-  <form action="/{{kontinent}}/" method="get">
-    <button type="submit">Ponovna igra</button>
-  </form>
 %elif stanje == model.ZMAGA:
   <h1 class="text-center">ZMAGA</h1>
-  <p>Zmagali ste!</p>
   <br><br>
-  <a href="/{{kontinent}}/">
-  <button type="submit">nova igra</button>
-  </a>
-
-% elif stanje == model.PORAZ:
-  <h1>PORAZ</h1>
-  <p>Izgubili ste!</p>
-  <a href="/">
-  <button type="submit">Začetna stran</button>
-  </a>
+  %if len(igra.napake) == 0:
+  <div class="container">
+    <div class="row; mt-3">
+    <div class="col; md-8">
+        <p>Niste storili nobene napake! Pritisnite gumb za ponovno igro, če želite igrati še enkrat (ne nujno na isti način) ali pa
+          kliknite na logo, da pridete do začetne strani.
+        </p>
+    </div>
+  </div>
+</div>
+<div class="container text-center">
+  <a href="/{{kontinent}}/" class="btn btn-secondary" role="button">Ponovna igra</a>
+  </div>
+<br><br>
+  %else:
+  <div class="container">
+    <div class="row; mt-3">
+    <div class="col; md-8">
+        <p>Zmagali ste! Vaše napake so prikazane spodaj. Pritisnite gumb za ponovno igro, če želite igrati še enkrat (ne nujno na isti način) ali pa
+          kliknite na logo, da pridete do začetne strani.
+        </p>
+      </div>
+    </div>
+  </div>
+    %for sez in igra.napake:
+    %ime = sez[0]
+    %link = sez[1]
+    <p class="text-center" style="color:red">{{ime}}</p>
+    <img src="/img/{{kontinent+'/'+link}}" class="rounded mx-auto d-block" alt="zastava"
+  style="width:400px;height:400px;">
   <br>
-  <a href="/{{kontinent}}/">
-  <button type="submit">nova igra</button>
-  </a>
-
+  <br>
+  %end
+  <div class="container text-center">
+    <a href="/{{kontinent}}/" class="btn btn-secondary" role="button">Ponovna igra</a>
+    </div>
+  <br><br>
+  %end
+%elif stanje == model.PORAZ:
+<h1 class="text-center">PORAZ</h1>
+<br><br>
+<div class="container">
+  <div class="row; mt-3">
+  <div class="col; md-8">
+      <p>Izgubili ste! Vaše napake so prikazane spodaj. Pritisnite gumb za ponovno igro, če želite igrati še enkrat (ne nujno na isti način) ali pa
+        kliknite na logo, da pridete do začetne strani.
+      </p>
+%for sez in igra.napake:
+%ime = sez[0]
+%link = sez[1]
+<p class="text-center" style="color:red">{{ime}}</p>
+<img src="/img/{{kontinent+'/'+link}}" class="rounded mx-auto d-block" alt="zastava"
+style="width:400px;height:400px;">
+<br>
+<br>
+%end
+<div class="container text-center">
+<a href="/{{kontinent}}/" class="btn btn-secondary" role="button">Ponovna igra</a>
+</div>
+<br><br>
 % else:
-<h1 class="text-center">{{kontinent.upper()}},{{igra.geslo}}</h1>
+  <h1 class="text-center">{{kontinent.upper()}}</h1>
   <img src="/img/{{kontinent+'/'+igra.povezava}}" class="rounded mx-auto d-block" alt="zastava"
-  style="width:850px;height:600px;">
+  style="width:850px;height:700px;">
   <br>
   <br>
   <form action="/{{kontinent}}/{{tezavnost}}/igra/" method="post">
     <div class="text-center">
     <b>Država:</b> <input type="text" name="beseda" autofocus autocomplete="off">
     <button class="btn btn-secondary" type="submit">Vnesi</button>
-  
+  <br><br>
+</form>
   %if tezavnost.upper() == "NETEKMOVALNO":
-  </form>
   %if len(igra.ugib) >= 2:
 <details>
   <summary style="color:red">Odgovor</summary>
   <p>{{igra.geslo.lower().capitalize()}}</p>
 </details>
+<br>
 </div>
+
 %end
 %end
 %end
