--- a/views/base.html
+++ b/views/base.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
- 
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
- 
-<meta name="viewport" content="width = device-width, initial-scale = 1">
-<title>Kviz držav sveta</title>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
- 
+  <meta charset="UTF-8">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta name="viewport" content="width = device-width, initial-scale = 1">
+  <title>Kviz o državah sveta</title>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous">
+
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-md py-5 navbar-dark bg-info">
-        <div class="container">
-          <a href="/" class="navbar-brand">
-            <span class="h1">KVIZ DRŽAV SVETA</span>
-          </a>
-          {{!base}}
-          
-      
-      
+  <nav class="navbar navbar-expand-md py-5 navbar-dark bg-info">
+    <div class="container">
+      <a href="/" class="navbar-brand">
+        <span class="h1">KVIZ O DRŽAVAH SVETA</span>
+      </a>
+      {{!base}}
