--- a/views/index.html
+++ b/views/index.html
@@ -1,38 +1,38 @@
+%import model
 % rebase("base.html")
 <ul class="navbar-nav">
    <li class="nav-item">
        <a href="/pomoc/" class="nav-link active h5">O KVIZU</a>
    </li>
-     <li class="nav-item">
-         <a href="https://github.com/filip-rus/Projektna-naloga-UVP" class="nav-link active h5">Github</a>
-     </li>
-     <li class="nav-item">
-       <form action="/odjava/" method="post" class="nav-link active h5">
+   <li class="nav-item">
+      <a href="https://github.com/filip-rus/Projektna-naloga-UVP" class="nav-link active h5" target=”_blank”>Github</a>
+   </li>
+   <li class="nav-item">
+      <form action="/odjava/" method="post" class="nav-link active h5">
          <button class="btn btn-danger" type="submit">Odjava ({{uporabnisko_ime}})</button>
-       </form>
+      </form>
    </li>
  </ul>
 </div>
 </nav>
 <br><br>
 <div class="container">
-    <img src="/img/zacetna.jpg" class="rounded mx-auto d-block" alt="sani" 
-    style="width:800px;height:400px;">
-  </div>
+    <img src="/img/tretja.jpg" class="rounded mx-auto d-block" alt="sani" 
+    style="width:750px;height:400px;">
+</div>
 <br>
 
 <div class="container text-center">
-    <a href="/europa/" class="btn btn-secondary" style="margin:50px;" role="button">Europa</a>
-    <a href="/azija/" class="btn btn-secondary" style="margin:50px;" role="button">Azija</a>
-    <a href="/afrika/" class="btn btn-secondary" style="margin:50px;" role="button">Afrika</a>
-    <a href="/amerika/" class="btn btn-secondary" style="margin:50px;" role="button">Amerika</a>
+   %for celina in model.KONTINENTI:
+   <a href="/{{celina.lower()}}/" class="btn btn-secondary" style="margin:50px;" role="button">{{celina}}</a>
+   %end
 </div>
 <br>
 <div class="container">
     <table class="table table-hover caption-top">
     <caption><b>Vaši najboljši časi</b></caption>
      <tr>
-        <th>Europa</th>
+        <th>Evropa</th>
         <th>Azija</th>
         <th>Afrika</th>
         <th>Amerika</th>
@@ -50,7 +50,7 @@
     <table class="table table-hover caption-top">
         <caption><b>Najboljši časi vseh uporabnikov</b></caption>
      <tr>
-        <th>Europa</th>
+        <th>Evropa</th>
         <th>Azija</th>
         <th>Afrika</th>
         <th>Amerika</th>
