--- a/views/igra.html
+++ b/views/igra.html
@@ -121,6 +121,15 @@
 <br><br>
 % else:
 <h1 class="text-center">{{kontinent.upper()}}</h1>
+<div class="container">
+  <div class="row; mt-3">
+    <div class="col; md-8">
+      <div class="float-end">{{str(len(igra.pravilni) + 1) + "/" + str(len(igra.celina))}}</div>
+    </div>
+  </div>
+</div>
+<br>
+<br>
 <img src="/img/{{kontinent+'/'+igra.povezava}}" class="rounded mx-auto d-block" alt="zastava"
   style="width:850px;height:700px;">
 <br>
